# transfer-dioxus

./: .gitattributes  .gitignore  Cargo.toml  Dioxus.toml  README.md  package.json  tailwind.css
assets/: tailwind.css
locales/: translate.toml
src/: app_state.rs  form_field.rs  lib.rs  main.rs  progress_writer.rs  receiver.rs  sender.rs
src/transfer_protocol/: mod.rs  progress_writer.rs  receive_protocol.rs  send_protocol.rs
src/ui/: dashboard.rs  mod.rs  receiver.rs  sender.rs
